--- a/ankimorphs/ui/preferences_dialog.ui
+++ b/ankimorphs/ui/preferences_dialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>AnkiMorph Preferences</string>
+   <string>AnkiMorph Settings</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
