renamed extra field 'focus morph' to 'unknowns'

--- a/ankimorphs/ui/settings_dialog.ui
+++ b/ankimorphs/ui/settings_dialog.ui
@@ -116,7 +116,7 @@
              </column>
              <column>
               <property name="text">
-               <string>Focus Morph</string>
+               <string>Unknowns</string>
               </property>
              </column>
              <column>
